--- a/amali.html
+++ b/amali.html
@@ -7,8 +7,6 @@
     <title>ujianscm</title>
 </head>
 <body>
-    <b>Github dan Git</b>
-    <i>Makmal computer 2</i>
-    <strike>Bengkel Teknologi Perisian Pengaturcaraan</strike>
+    <h1 style="font-size:17px;">Heading 1</h1>
 </body>
 </html>
